Start results chapter

--- a/groceries.bib
+++ b/groceries.bib
@@ -93,6 +93,17 @@
   abstract = {This book, which is intended as a graduate level text and a general professional reference, presents the methods of discrete choice analysis and their applications in the modeling of transportation systems. The first seven chapters provide a basic introduction to discrete choice analysis that covers the material needed to apply basic binary and multiple choice models. The chapters are as follows: introduction; review of the statistics of model estimation; theories of individual choice behavior; binary choice models; multinomial choice; aggregate forecasting techniques; and tests and practical issues in developing discrete choice models. The rest of the chapters cover more advanced material and culminate in the development of a complete travel demand model system presented in chapter 11. The advanced chapters are as follows: theory of sampling; aggregation and sampling of alternatives; models of multidimensional choice and the nested logit model; and systems of models. The last chapter (12) presents an overview of current research frontiers.}
 }
 
+@misc{bureauoflaborstatistics2023,
+  title = {12-Month Percentage Change, {{Consumer Price Index}}, Selected Categories},
+  author = {{Bureau of Labor Statistics}},
+  year = {2023},
+  journal = {Consumer Price Index},
+  urldate = {2023-08-22},
+  howpublished = {https://www.bls.gov/charts/consumer-price-index/consumer-price-index-by-category-line-chart.htm},
+  langid = {english},
+  file = {/Users/gregmacfarlane/Zotero/storage/2PP95WH6/consumer-price-index-by-category-line-chart.html}
+}
+
 @article{cass2005,
   title = {Social {{Exclusion}}, {{Mobility}} and {{Access}}},
   author = {Cass, Noel and Shove, Elizabeth and Urry, John},
