--- a/04_estimation.qmd
+++ b/04_estimation.qmd
@@ -8,6 +8,83 @@ library(mlogit)
 library(wesanderson)
 ```
 
+This section presents results on the nutrition environment in each of the three
+communities of Utah County, West Salt Lake County, and San Juan County, along with 
+destination choice model estimates and their application to creating accessibility
+maps of each community and the entire state of Utah.
+
+## Nutrition Environment
+
+```{r loadnems}
+tar_load(nems_groceries)
+nems_groceries <- nems_groceries |> 
+  ungroup() |> 
+  mutate(
+    type = ifelse(type == "Trading Post", "Other", type),
+    inflation = ifelse(county == "Utah", market * 1.094, market),
+    county = factor(county, levels = c("Utah", "Salt Lake", "San Juan"))
+  )
+```
+
+Though some basic descriptive statistics of the grocery store attributes were 
+presented in @tbl-nems, some additional exploration of the these
+attributes is valuable to understand the nutrition environment in these three
+communities.
+
+```{r nems-market-avail}
+#| label: fig-nems-market-avail
+#| fig-cap: Relationship between NEMS availability score and market basket score in each study community. Utah county prices adjusted for 2021-2022 annual inflation.
+ggplot(nems_groceries, aes(x = availability, y = market, group = county)) + 
+  geom_point(alpha = 0.5, mapping = aes(color = type)) + 
+  geom_smooth(method = "lm") +
+  facet_grid(~county) + 
+  theme_bw() + xlab("NEMS Availability Score")  +
+  ylab("Market Basket Cost [$]") +
+  scale_color_manual("Store Type", values = wesanderson::wes_palette('Darjeeling1')[c(1:3, 5)])
+```
+
+@fig-nems-market-avail presents the relationship between the recorded NEMS availability
+score and the USDA market basket cost at the stores by community and store type. 
+In all three communities, the relationship is strongly negative, with stores that
+stock more varieties of goods also having overall lower prices for those goods. 
+This is emphasized by the bottom-right quadrants of these plots (high availability, 
+low-cost) being dominated by full-service grocery stores, which have more availability
+and lower prices than convenience stores or dollar stores, but require higher traffic
+and demand to make up for their lower profit margins.
+Average prices in Utah County are lower than prices in the other 
+two communities across the availability spectrum; this is true even after
+adjusting for 9.4% annual inflation between March 2021 and March 2022 in food 
+products [@bureauoflaborstatistics2023].
+
+```{r nems-cost-avail}
+#| label: fig-nems-cost-avail
+#| fig-cap: Relationship between NEMS availability score and cost score in each study community.
+ggplot(nems_groceries, aes(x = availability, y = cost)) + 
+  geom_point(alpha = 0.5, mapping = aes(color = type)) + 
+  geom_smooth(method = "lm") +
+  facet_grid(~county) + 
+  theme_bw() + xlab("NEMS Availability Score")  +
+  ylab("NEMS Cost Score") +
+  scale_color_manual("Store Type", values = wesanderson::wes_palette('Darjeeling1')[c(1:3, 5)])
+```
+
+@fig-nems-cost-avail shows the relationship between the NEMS availability and cost 
+scores. In this case the relationship is generally positive, with stores that 
+stock more healthful options also placing these options at competitive prices.
+Conversely, stores that have fewer of these options tend to place the options
+they do stock at a higher price point. This relationship between availability
+and cost of healthful goods is strongest in San Juan County, with convenience
+stores anchoring the low-availability, high-premium quadrant for healthy food.
+It should be noted that these convenience stores also exist in the Utah County
+community, but we explicitly included them in the San Juan data collection as
+they are the only food markets of any kind in multiple towns, with dozens of miles
+separating towns from each other.
+
+
+## Destination Choice 
+
+The models were estimated using the mlogit package for R [@mlogit]. To illustrate
+the role of different 
 
 ```{r loadmodels}
 tar_load(sl_models)
@@ -72,3 +149,6 @@ list(
   scale_color_manual(values = wesanderson::wes_palette('Darjeeling1'))
 ```
 
+## Accessibility
+
+### Statewide Accessibility
