--- a/04_estimation.qmd
+++ b/04_estimation.qmd
@@ -1,4 +1,4 @@
-# Results
+# Results {#sec-results}
 
 ```{r setup, file = "R/chapter_start.R", include = FALSE}
 # a number of commands need to run at the beginning of each chapter. This
@@ -13,7 +13,7 @@ communities of Utah County, West Salt Lake County, and San Juan County, along wi
 destination choice model estimates and their application to creating accessibility
 maps of each community and the entire state of Utah.
 
-## Nutrition Environment
+## Nutrition Environment {#sec-nems}
 
 ```{r loadnems}
 tar_load(nems_groceries)
@@ -81,10 +81,26 @@ they are the only food markets of any kind in multiple towns, with dozens of mil
 separating towns from each other.
 
 
-## Destination Choice 
+## Destination Choice {#sec-estimation}
 
-The models were estimated using the mlogit package for R [@mlogit]. To illustrate
-the role of different 
+Using the data collected and MNL destination choice model as described in 
+@sec-methods, we estimate a series of model specifications in each community with 
+the `mlogit` package for R [@mlogit]. To illustrate the role of different data
+elements on destination choice, we develop and estimate four different utility
+equations:
+\begin{align*}
+\mathrm{Access} &= \beta_{MCLS}( k_{ij})\\
+\mathrm{NEMS} &= \beta_{n-a} (\mathrm{NEMS-Availability}) + \beta_{n-c}\mathrm({NEMS-Cost})\\
+\mathrm{Attributes} &= \beta_{mkt} (\mathrm{Market Basket}) + \mathbf{\beta}_{type}(\mathrm{Type})\\
+\mathrm{All} &= \mathrm{Access} + \mathrm{NEMS} + \mathrm{Attributes}\\
+\end{align*}
+The Access model includes only the mode choice logsum described in @eq-mcls.
+The NEMS model includes the NEMS cost and availability scores describing the goods
+the store offers, while the Attributes model contains information that might be
+more conventionally available to shoppers including the size, type, and average
+prices at the store. As the nutrition environment in each community contains
+different types of stores, the specific type coefficients differ by community.
+The All model contains all of the other three sets of estimated coefficients.
 
 ```{r loadmodels}
 tar_load(sl_models)
@@ -103,51 +119,127 @@ gm <- list(
 
 cm <- c(
   "duration_CAR" = "Automobile Travel Time",
-  "mclogsum" = " Mode Choice Logsum", 
+  "mclogsum" = " Mode Choice Log-sum", 
   "availability" = "NEMS Availability Score",
   "cost" = "NEMS Cost Score",
   "market" = "USDA Market Basket",
-  "registers" = "Registers",  
+  "total_registers" = "Registers",  
   "typeDollar Store" = "Store Type: Dollar Store", 
   "typeConvenience Store" = "Store Type: Convenience Store",
   "typeOther" = "Store Type: Other"
 )
 ```
 
-
-```{r sl-models}
-#| label: tbl-sl-models
-#| tbl-cap: Estimated Models of Salt Lake County
-modelsummary(sl_models, gof_map = gm, coef_map = cm)
-```
-
-
 ```{r utah-models}
 #| label: tbl-utah-models
 #| tbl-cap: Estimated Models of Utah County
-modelsummary(ut_models, gof_map = gm, coef_map = cm)
+modelsummary(ut_models, gof_map = gm, coef_map = cm, 
+             stars = c('*' = 0.05, '**' = 0.01),
+             statistic = "({statistic})",
+             notes = list("t-statistics in parentheses"))
 ```
+
+@tbl-utah-models presents the estimated coefficients in the Utah County
+community. In general, the utility coefficients are statistically significant 
+and in a direction that would be expected by informed hypothesis.
+The Access model has a positive coefficient on its mode choice log-sum term, which 
+indicates that as the mode choice logsum between a block group and 
+a store increases ---
+indicating lower travel costs between Census block groups and the store, 
+because travel times in @eq-mcls have a negative relationship with utility --- 
+a higher proportion of mobile devices residing in that block group are observed
+to travel to that store. The NEMS model shows a positive relationship between
+both environment variables and utility, indicating that people are more likely
+to choose stores with higher availability of healthy goods and more advantagous
+prices for those goods, all else equal. The Attributes model suggests that  
+people are less willing to visit stores with higher prices, fewer registers,
+and convenience stores or other non-standard grocery stores with the exception
+of dollar stores, which they are *more* attracted to. Combining all of these
+variables in the All model retain the significance, direction, and basic 
+scale of all previous estimates with the exception of the NEMS availability
+variable. In this case, it seems that the previous positive relationship
+may have been a result of correlation between NEMS availability and other variables
+such as cost or the number of registers. And when controlling for all other 
+variables, the role of transportation access becomes somewhat more important
+than considering only distance alone, implying that people are willing to travel
+somewhat further for stores with attributes they value.
+
+The overall fit of the four models in @tbl-ut-models is also revealing: the model
+with only NEMS variables gainst almost no predictive power over randomly selecting
+any store in the community (as revealed by the $\rho_0^2$ statistic). Though all
+sets of variables contribute to the overall fit, it is apparent that the bulk of 
+model explanatory power is due to transportation proximity.
 
 
 ```{r sl-models}
-#| label: tbl-sj-models
-#| tbl-cap: Estimated Models of San Juan County
-modelsummary(sj_models, gof_map = gm, coef_map = cm)
+#| label: tbl-sl-models
+#| tbl-cap: Estimated Models of West Salt Lake Valley
+modelsummary(sl_models, gof_map = gm, coef_map = cm,
+             stars = c('*' = 0.05, '**' = 0.01),
+             statistic = "({statistic})",
+             notes = list("t-statistics in parentheses"))
 ```
 
+
+
+```{r sj-models}
+#| label: tbl-sj-models
+#| tbl-cap: Estimated Models of San Juan County
+modelsummary(sj_models, gof_map = gm, coef_map = cm,
+             stars = c('*' = 0.05, '**' = 0.01),
+             statistic = "({statistic})",
+             notes = list("t-statistics in parentheses"))
+```
+
+@tbl-sl-models presents the estimated coefficients in the west Salt Lake Valley
+community, and  @tbl-sj-models presents the estimated coefficients in San Juan 
+County. The same general story about coefficient direction and hypotheses applies
+in both of these communities, except in regards to the NEMS variables. 
+In Salt Lake, the NEMS cost score appears negative when estimated alone but becomes
+positive when other variables are included. In San Juan, these variables 
+are consistently positive. Additionally, the story of model fit is reversed: 
+in both Salt Lake and San Juan, the attributes of the store explain more of the
+model fit than the transportation impedance term. 
 
 
 ```{r all-comp}
 #| label: fig-all-comp
-#| fig-cap: Comparison of county model coefficient estimates.
+#| fig-cap: Comparison of county model coefficient estimates. Absolute square root transformation applied to improve visibility.
+#| out-width: "6in"
+
+# use a square root transformation, but have it work in both directions.
+absqrt <- scales::trans_new(
+  "absqrt",
+  function(x){sign(x) * sqrt(abs(x))},
+  function(x){sign(x) * x^2},
+  breaks = scales::extended_breaks(),
+  minor_breaks = scales::regular_minor_breaks(),
+  format = scales::format_format(),
+  domain = c(-Inf, Inf)
+)
 list(
-  "Salt Lake" = sl_models[["All"]],
-  "Utah"      = ut_models[["All"]],
-  "San Juan"  = sj_models[["All"]]
+  "Utah County"      = ut_models[["All"]],
+  "Salt Lake"        = sl_models[["All"]],
+  "San Juan"         = sj_models[["All"]]
 ) |> 
   modelplot(coef_map = cm) +
+  scale_x_continuous(trans = absqrt, breaks = c(-1, 0, 1, 3, 5, 10)) +
   scale_color_manual(values = wesanderson::wes_palette('Darjeeling1'))
 ```
+
+To better visualize how the preferences in the three communities differ
+from each other, @fig-all-comp plots the coefficient estimates from the All
+model in each community. The mode choice log-sum is strongly significant in all
+three communities, but it has its smallest value in San Juan County where 
+people often must travel long distances to reach any stores. The highest mode 
+choice log-sum value is in Salt Lake, but this explains a smaller proportion of 
+the model outcomes than the lower value in Utah County; a possible hypothesis for
+this observation may include the higher density of stores in Salt Lake 
+ --- attributes are more important when so many stores are close together --- paired with the somewhat lower vehicle ownership in that community driving 
+up the coefficient value. Most other estimates are somewhat consistent 
+across counties, with the exception of the NEMS variables discussed previously
+and the role of dollar stores and other stores in each community.
+
 
 ## Accessibility
 
