--- a/04_estimation.qmd
+++ b/04_estimation.qmd
@@ -1,11 +1,14 @@
 # Results {#sec-results}
 
-```{r setup, file = "R/chapter_start.R", include = FALSE}
+```{r setup, file = "R/chapter_start.R", include = FALSE, cache = FALSE}
 # a number of commands need to run at the beginning of each chapter. This
 # includes loading libraries that I always use, as well as options for 
 # displaying numbers and text.
 library(mlogit)
 library(wesanderson)
+library(sf)
+library(ggspatial)
+library(viridisLite)
 ```
 
 This section presents results on the nutrition environment in each of the three
@@ -164,7 +167,7 @@ variables, the role of transportation access becomes somewhat more important
 than considering only distance alone, implying that people are willing to travel
 somewhat further for stores with attributes they value.
 
-The overall fit of the four models in @tbl-ut-models is also revealing: the model
+The overall fit of the four models in @tbl-utah-models is also revealing: the model
 with only NEMS variables gainst almost no predictive power over randomly selecting
 any store in the community (as revealed by the $\rho_0^2$ statistic). Though all
 sets of variables contribute to the overall fit, it is apparent that the bulk of 
@@ -241,6 +244,92 @@ across counties, with the exception of the NEMS variables discussed previously
 and the role of dollar stores and other stores in each community.
 
 
-## Accessibility
+## Accessibility {#sec-access}
 
-### Statewide Accessibility
+```{r utbgaccess}
+tar_load(utbgaccess)
+```
+
+
+With the models estimated in @sec-estimation, we can evaluate the spatial access
+of each community. @fig-map-ut shows the value of the grocery store destination 
+choice log-sum for block groups in Utah County. Unsurprisingly, the block groups
+in the core of the urban areas of the region have the highest access to grocery 
+stores, because this is where the stores are located and also where the
+transportation access to multiple destinations is highest. This map also contains 
+somewhat interesting implications for the equity of access. A perhaps unique feature
+of Utah County's demographic geography is that the wealthiest neighborhoods 
+tend to be located on the mountain benches east of the main urban areas. This means
+that in Utah County, at least, the neighborhoods with the lowest access to grocery
+stores are actually some of the wealthiest neighborhoods with the lowest concentrations
+of ethnic minorities in the region. 
+
+```{r map-ut}
+#| label: fig-map-ut
+#| fig-cap: Modeled access to grocery stores in Utah County
+#| out-width: "6in"
+pal <- wesanderson::wes_palette("Zissou1", 100, type = "continuous")
+
+ggplot(utbgaccess, aes(fill = access)) +
+  ggspatial::annotation_map_tile("cartolight", zoom = 11) +
+  geom_sf(alpha = 0.7, lwd = 0) +
+    theme(axis.text.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        axis.text.y = element_blank(),
+        axis.ticks.y = element_blank()) +
+  scale_fill_gradientn("Access", colours = pal)
+```
+
+
+Of course, much of this high access in the urban core of Utah County 
+is achieved by cheap and available automobile transportation. We can 
+consider what access looks like for those without cars by re-computing the mode
+choice log-sum described in @sec-mcls between all block group / store pairs but
+eliding the automobile mode, and examining the resulting impact to destination
+choice utility. @fig-map-nocar shows the results of this analysis: whereas the 
+total access (with car inlcuded) is a smooth gradient across the valley, the 
+access for individuals without vehicles is blocky and discontinuous, with neighboroods
+of relatively good access immediately next to neighborhoods with bad or non-existent
+access. This may reflect the discontinuous nature of active transport and public transit
+facilities in the region, as well as the auto-dominated locations of many
+grocery stores. Note also that even for neighborhoods of relatively good 
+non-vehicle access, the destination choice log-sum value is substantially lower
+than the logsum with vehicle access; the minimum value on with vehicles is just
+below 0, whereas the *maximum* log-sum without vehicles is around -70.
+
+```{r map-nocar}
+#| label: fig-map-nocar
+#| fig-env: sidewaysfigure
+#| fig-cap: "Access to groceries in Salt Lake County with and without a vehicle."
+#| fig-subcap: 
+#|   - "With vehicles"
+#|   - "Without vehicles"
+#| layout-ncol: 2
+#| out-width: "4in"
+tar_load(nocaraccess)
+
+ggplot(nocaraccess, aes(fill = dclogsum)) +
+  ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
+  geom_sf(lwd = 0, alpha = 0.7) +
+  scale_x_continuous(limits = c(-112.11, -111.7)) + 
+  scale_y_continuous(limits = c(40.5, 40.8)) + 
+    theme(axis.text.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        axis.text.y = element_blank(),
+        axis.ticks.y = element_blank()) +
+  scale_fill_gradientn("Access", colours = pal)
+
+ggplot(nocaraccess |> filter(!is.na(nocarlogsum)), aes(fill = nocarlogsum)) +
+  ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
+  geom_sf(lwd = 0, alpha = 0.7) +
+  scale_x_continuous(limits = c(-112.11, -111.7)) + 
+  scale_y_continuous(limits = c(40.5, 40.8)) + 
+    theme(axis.text.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        axis.text.y = element_blank(),
+        axis.ticks.y = element_blank()) +
+  scale_fill_gradientn("Access", colours = pal)
+```
+
+
+
