Add mice citation

--- a/packages.bib
+++ b/packages.bib
@@ -1,4 +1,4 @@
-@Article{mlogit,
+@article{mlogit,
   title = {Estimation of Random Utility  Models in {R}: The {mlogit} Package},
   author = {Yves Croissant},
   journal = {Journal of Statistical Software},
@@ -9,7 +9,7 @@
   doi = {10.18637/jss.v095.i11},
 }
   
-@Article{modelsummary,
+@article{modelsummary,
   title = {{modelsummary}: Data and Model Summaries in {R}},
   author = {Vincent Arel-Bundock},
   journal = {Journal of Statistical Software},
@@ -18,4 +18,15 @@
   number = {1},
   pages = {1--23},
   doi = {10.18637/jss.v103.i01},
+}
+
+@article{mice,
+  title = {{mice}: Multivariate Imputation by Chained Equations in R},
+  author = {Stef {van Buuren} and Karin Groothuis-Oudshoorn},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {45},
+  number = {3},
+  pages = {1-67},
+  doi = {10.18637/jss.v045.i03},
 }
