Update reference style, and correct reference to Macfarlane2022

--- a/groceries.bib
+++ b/groceries.bib
@@ -665,7 +665,7 @@
   file = {/Users/gregmacfarlane/Zotero/storage/LHE97PQF/Lunsford et al. - 2021 - Analysis of Availability, Quality, and Price of Fo.pdf}
 }
 
-@article{macfarlane2022,
+@article{macfarlane2022a,
   title = {City Parks and Slow Streets: {{A}} Utility-Based Access and Equity Analysis},
   shorttitle = {City Parks and Slow Streets},
   author = {Macfarlane, Gregory and Voulgaris, Carole Turley and Tapia, Teresa},
@@ -677,12 +677,12 @@
   pages = {587--612},
   issn = {1938-7849},
   doi = {10.5198/jtlu.2022.2009},
-  urldate = {2023-03-29},
+  urldate = {2023-08-22},
   abstract = {During the spring and summer of 2020, cities across the world responded to the global COVID-19 pandemic by converting roadway facilities into open pedestrian spaces. These conversions improved access to public open space, but measuring the variation in that improvement among different populations requires clear definitions of access and methods for measuring it. In this study, we evaluate the change in a utility-based park accessibility measure resulting from street conversions in Alameda County, California. Our utility-based accessibility measure is constructed from a park activity location choice model we estimate using mobile device data \textendash{} supplied by StreetLight Data, Inc. \textendash{} representing trips to parks in that county. The estimated model reveals heterogeneity in inferred affinity for park attributes among different sociodemographic groups. We find, for example, that neighborhoods with more lower-income residents and those with more residents of color show a greater preference for park proximty while neighborhods with higher incomes and those with more white residents show a greater preference for park size and amenities. We then apply this model to examine the accessibility benefits resulting from COVID-19 street conversions to create a set of small park-like open spaces; we find that this has been a pro-social policy in that Black, Hispanic, and low-income households receive a disproportionate share of the policy benefits, relative to the population distribution.},
   copyright = {Copyright (c) 2022 Gregory Macfarlane, Carole Turley Voulgaris, Teresa Tapia},
   langid = {english},
   keywords = {Parks},
-  file = {/Users/gregmacfarlane/Zotero/storage/T7X4E8NH/Macfarlane et al. - 2022 - City parks and slow streets A utility-based acces.pdf}
+  file = {/Users/gregmacfarlane/Zotero/storage/PJVZG9J5/Macfarlane et al. - 2022 - City parks and slow streets A utility-based acces.pdf}
 }
 
 @article{madzia2019,
